--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Digital Stamp Collection</title>
-    <style>
-        body { font-family: Arial, sans-serif; }
-        .stamp { border: 1px solid #ddd; padding: 10px; margin: 10px; display: inline-block; }
-        img { max-width: 100px; }
-    </style>
+    <link rel='stylesheet' href = 'style.css'>
 </head>
 <body>
     <h1>My Digital Stamp Collection</h1>
