still correcting button position

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href = 'style.css'>
 </head>
 <body>
-    <button id = 'login Button'> Admin Login </button>
+    <button id = 'login-button'> Admin Login </button>
     <h1>My Digital Stamp Collection</h1>
     <div class="stamp">
         <h2>Apollo 11</h2>
