--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href = 'style.css'>
 </head>
 <body>
-    <button id = 'login-button'> Admin Login </button>
+    <button id = 'login-button', a="login.html"> Admin Login </button>
 </body>
 </html>
 
