--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href = 'style.css'>
 </head>
 <body>
-    <button id = 'login-button' onclick="window.location.href='https://https://anqi-wang-aug.github.io/my_digital_stamp_album/login.html';"> Admin Login </button>
+    <button id = 'login-button' onclick="window.location.href='https://anqi-wang-aug.github.io/my_digital_stamp_album/login.html';"> Admin Login </button>
 </body>
 </html>
 
