--- a/login.html
+++ b/login.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <head>
-    <title>Login Page</title>
+    <title>Admin Login</title>
 </head>
 <body>
-    
+    <div class="container">
+        <form id="login-form" action="/login" method="post">
+            <label for="admin">admin username</label>
+            <input id="admin" name="admin" required/>
+            <br/>
+            <label for="pwd">password</label>
+            <input id="pwd" name="password" required/>
+            <br/>
+            <button type="submit"/> Submit
+        </form>
+    </div>
 </body>
