--- a/login.html
+++ b/login.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <head>
     <title>Admin Login</title>
+    <link rel='stylesheet' href = 'style.css'>
 </head>
 <body>
-    <div class="container">
-        <form id="login-form" action="/login" method="post">
-            <label for="admin">admin username</label>
-            <input id="admin" name="admin" required/>
-            <br/>
-            <label for="pwd">password</label>
-            <input id="pwd" name="password" required/>
-            <br/>
-            <button type="submit"/> Submit
-        </form>
-    </div>
+    <form id="login-form">
+            <p>
+                <label for="admin" name="admin" >admin</label>
+                <input id='admin' required/><br/>
+            </p>
+            <p>
+                <label for="pwd" name="pwd"> password</label>
+                <input id="pwd" required/ >
+            </p>
+            <p><button class='site-button' type='Submit' id="login-submit">Submit</button></p>
+            
+    </form>
 </body>
