1. Login button deleted 2. pop up form completed

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Digital Stamp Collection</title>
+    <title>My Digital Stamp Book</title>
     <link rel='stylesheet' href = 'style.css'>
 </head>
 <body>
-    <button class='site-button login-button' id="login-button" onclick="window.location.href='https://anqi-wang-aug.github.io/my_digital_stamp_album/login.html';"> Admin Login </button>
+    <button class="site-button" id="manage" onclick="window.location.href='manage.html'">Manage</button>
 </body>
 </html>
 
