1. Changed font family of buttons 2. Added new field "Printings: to "Add" form

--- a/manage.html
+++ b/manage.html
@@ -35,6 +35,10 @@
                     <option> Stamp with Attached Label</option>
                 </select>
             </p>
+            <p>
+                <label for="printings"> Printings: </label>
+                <inpput type="text", id="printings"></inpput>
+            </p>
             <p> 
                 <label for="designer"> Designer: </label>
                 <input type="text", id="designer"/>
