Changed field name "Year" to "Issued on"

--- a/manage.html
+++ b/manage.html
@@ -37,7 +37,7 @@
             </p>
             <p>
                 <label for="printings"> Printings: </label>
-                <inpput type="text", id="printings"></inpput>
+                <input type="text", id="printings"></inpput>
             </p>
             <p> 
                 <label for="designer"> Designer: </label>
