--- a/manage.html
+++ b/manage.html
@@ -11,7 +11,7 @@
                 <input type="file" id="img" name="stamp-img"/>
             </p>
             <p>
-                <label for="year">Year: </label>
+                <label for="year">Issued on: </label>
                 <input type="date" id="year" name="stamp-year"/> 
             </p>
             <p>
@@ -45,7 +45,11 @@
             </p>
             <p>
                 <label for="description"> Description: </label>
-                <textarea  cols="30" rows="10"></textarea>
+                <textarea id="description" cols="30" rows="10"></textarea>
+            </p>
+            <p>
+                <label for='is-used'> Used? </label>
+                <input type="checkbox" id="is-used"/>
             </p>
             <input type="submit" id='submit' value="All writes completed!"/>
         </form>
